# rest-sample

./: .flaskenv  .travis.yml  README.md  pyproject.toml
rest_sample/blueprints/: __init__.py  root.py
tests/: conftest.py
