[tool.poetry]
name = "rest-sample"
version = "0.1.0"
description = "Learning Rest using flask"
authors = ["Abhimanyu Shegokar <abhimanyu.shegokar@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.3"
pytest = "^5.2"
pytest-flask = "^0.15.0"
black = {version = "^19.10-alpha.0", allows-prereleases = true}
mypy = "^0.740.0"
safety = "^1.8"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
